--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -19,14 +19,44 @@ block content
 						button.btn.-blue CALL US 1800 XXX XX XX
 					.vault-right.lost-right
 						img(src='/img/lost.svg')
-				h5.subtitle Follow these steps
+				h5.lost-subtitle Follow these steps
 				ul.lost-steps-list
 					li.lost-item
 						.lost-item_img
 							img(src='/img/lost1.png')
 						.lost-item-content
-							h5.lost-item_title 1. Secure your cards
+							h5.lost-item_title
+								strong 1.
+								span Secure your cards
 							p.lost-item_text
 								| Safeguard your cards in the vault to help you recalling in the event that you misplace your wallet.
+					li.lost-item
+						.lost-item_img
+							img(src='/img/lost2.png')
+						.lost-item-content
+							h5.lost-item_title
+								strong 2.
+								span Contact Us
+							p.lost-item_text
+								| Should you misplace your wallet or purse, contact us for immediate assistance at
+								a(href='#').link.-blue 855-200-6788.
+					li.lost-item
+						.lost-item_img
+							img(src='/img/lost3.png')
+						.lost-item-content
+							h5.lost-item_title
+								strong 3.
+								span Follow the process
+							p.lost-item_text
+								| Our Lost Wallet Service experts will guide you through recovering and securing all your vital information.
+					li.lost-item
+						.lost-item_img
+							img(src='/img/lost4.png')
+						.lost-item-content
+							h5.lost-item_title
+								strong 4.
+								span File a police report
+							p.lost-item_text
+								| A police report may be helpful in disputing fraudulent charges if necessary.
 		script(src='/front.js' type='module')
 
