--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -1019,3 +1019,85 @@ body
 		&_text
 			padding-left: 19px
 			color RGB($pdark_gray)
+.risk
+	&-score
+		&-row
+			align-items: center
+			justify-content: space-between
+			flex-wrap wrap
+		&-img
+			w 100%
+		&-digit,&-state
+			margin-bottom: 24px
+		&-digit
+			font 500 40px/48px Barlow
+		&-state
+			font 700 24px/28.8px Barlow
+			text-transform: uppercase
+			color RGB(243,184,44)
+	&-subtitle
+		font-weight: 500
+		margin-top: 40px
+	&-text
+		margin-top: 8px
+		margin-bottom: 20px
+	&-data
+		margin-top: 40px
+		border-top: 2px solid RGB($plight_gray)
+		padding-top: 40px
+		&-head
+			font-weight: 500
+			align-items: center
+			column-gap: 20px
+			svg
+				wh 12px 8px
+		&-body
+			padding-top: 24px
+			&-item
+				padding 24px
+				border 2px solid RGBA($plight_blue,.2)
+				border-radius: 8px
+				column-gap: 16px
+				margin-bottom: 16px
+				&_title
+					font 500 24px/28.8px Barlow
+				&_subtitle
+					font 400 16px/19.2px Barlow
+				&_text
+					margin-top: 8px
+					color RGB($pdark_gray)
+					font 400 16px/19.2px Barlow
+				&_img
+					flex 0 0 32px
+					wh 32px 23px
+
+	&-list
+		display: flex
+		flex-wrap wrap
+		margin-top: 40px
+		column-gap: 42px
+		&-svg
+			position: absolute
+			bottom: -280px
+			right: -50px
+		&-item
+			position: relative
+			display: flex
+			column-gap: 8px
+			margin-bottom: 48px
+			&.-full
+				w 100%
+				.risk-list-item_content
+					+desktop()
+						w 340px
+			+desktop()
+				w 340px
+			&_img
+				flex 0 0 32px
+				svg
+					wh 32px 25px
+			&-title
+				font-weight: 500
+			&-text
+				margin-top: 8px
+				color: RGB($pdark_gray)
