Add updates to layout styles in 'Add Family Member' section
This commit carries enhancements to layout styles in the 'Add Family Member' section, aiming for improved user interaction. Changes involve updates and adjustments to styles in front.styl and main.styl files. Additionally, SVG file changes further the goal of a better design aesthetic.

--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -29,7 +29,7 @@ header.head
 						span Sign In
 				button.head-burger
 					span.head-burger_item
-			.head-mobile-menu-cont.-show
+			.head-mobile-menu-cont
 				ul.head-mobile-menu.row
 					li.head-mobile-menu_item.head-menu_item
 						a(href='#') Home
