--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -10,6 +10,9 @@ body
 	df({
 		df:'.row'
 	})
+	flex-wrap wrap
+	+desktop()
+		flex-wrap nowrap
 .head
 	&-row
 		align-items: center
@@ -64,9 +67,11 @@ body
 				top calc( var(--header_height) + 20px)
 				position absolute
 				padding 0 20px
-				left: 0
+				left: -100%
 				background-color RGB($pwhite)
 				z-index 999
+				&.-show
+					left: 0
 				+desktop()
 					display: none
 			display: flex
@@ -74,10 +79,11 @@ body
 			&.-show
 				visibility visible
 			&_item
-				padding 8px
+				padding 10px 8px
 				margin-bottom 24px
 				font 500 16px/19.2px Barlow
 		&-sublist
+			display: none
 			margin-top: -16px
 		&-subitem
 			df({
@@ -177,6 +183,10 @@ body
 			fill RGB($pdark_blue)
 	.menu_value
 		color RGB($pdark_blue)
+	& + .head-mobile-sublist
+		display: block
+		opacity: 1
+		visibility: visible
 .block
 	w(735px)
 	max-width 735px
@@ -504,21 +514,29 @@ body
 		margin-top 32px
 	&-block
 		position: relative
-		min-width 504px
-		max-width 504px
 		border-radius 8px
 		padding 24px
 		margin-bottom: 16px
-		margin-right: 16px
 		border 1.5px solid RGBA($plight_blue,.2)
 		background-color RGB($pwhite)
 		box-shadow 0 4px 16px RGBA($plight_blue,.16)
+		+desktop()
+			margin-right: 16px
+			min-width 504px
+			max-width 504px
+		.btn
+			w 100%
+			+desktop()
+				width initial
 		&.-large
 			padding-bottom: 24px
 		&_head
 			display: flex
-			align-items: center
-			justify-content: space-between
+			flex-direction column
+			+desktop()
+				flex-direction row
+				align-items: center
+				justify-content: space-between
 		&-status
 			font 700 13px/15.6px Barlow
 			color RGB($ugreen)
@@ -534,14 +552,23 @@ body
 			column-gap: 8px
 			font 500 24px/32px Barlow
 			color RGB($pdark_blue)
+			order 2
+			margin-top: 8px
 			svg
 				wh 19px 15px
+			+desktop()
+				order 1
+				margin-top: 0
 		&-list
 			margin-top: 16px
 			&-item
 				display: flex
-				align-items: center
 				padding: 16px 0
+				&.nopad
+					flex-wrap wrap
+				+desktop()
+					flex-wrap nowrap
+					align-items: center
 				&.-empty
 					padding: 16px
 					background-color RGBA($plight_blue,.08)
@@ -563,11 +590,15 @@ body
 					&.-short
 						w 50%
 				&_right
-					padding-right: 41px
-					padding-left: 41px
+					padding 24px 20px
+					+desktop()
+						padding-right: 41px
+						padding-left: 41px
 				&_title
 					font 500 16px/19.2px Barlow
-					padding-top: 53px
+					padding-top: 16px
+					+desktop()
+						padding-top: 53px
 				&_text
 					font-weight: 400
 					color RGB($pdark_gray)
@@ -582,9 +613,13 @@ body
 					color RGB($pdark_blue)
 					margin-bottom: 4px
 			&-item_image
-				flex 0 0 calc( 16px + 16px + 40px)
+				flex 0 0 calc( 16px + 16px + 10px)
 				display: flex
 				justify-content center
+				margin-right: 8px
+				+desktop()
+					margin-right: 0px
+					flex 0 0 calc( 16px + 16px + 40px)
 				svg
 					wh 31px 30px
 					use
@@ -673,11 +708,20 @@ body
 			border: 2px solid #fff
 .gray
 	&-block
-		padding-left: 46px
+		+desktop()
+			padding-left: 46px
 		&-title
 			font 500 24px/32px Barlow
 			padding-bottom: 24px
 			border-bottom 1.5px solid RGBA($plight_blue,.2)
+		.btn
+			w 100%
+			text-align: center
+			display: block
+			+desktop()
+				w initial
+				display: inline-block
+				text-align: left
 	&-actions
 		display: flex
 		align-items: center
@@ -699,14 +743,19 @@ body
 	&-bottom
 		&-row
 			column-gap: 16px
-			max-width 1024px
-			margin-top: 24px
+			margin-top: 80px
 			padding-top: 40px
 			border-top 1.5px solid RGBA($plight_blue,.2)
+			+desktop()
+				margin-top: 24px
+				max-width 1024px
 		&-block
-			max-width 504px
-			min-width 504px
+			+desktop()
+				max-width 504px
+				min-width 504px
+				margin-top: 0
 			padding-left: 0
+			margin-top: 40px
 			.gray-text
 				margin-top: 8px
 
@@ -1101,3 +1150,24 @@ body
 			&-text
 				margin-top: 8px
 				color: RGB($pdark_gray)
+.n404
+	&-content
+		height calc( 100vh - 67px)
+		display: flex
+		align-items: center
+		justify-content: center
+		flex-direction column
+	&-img
+		display: block
+		margin 40px 0
+	&-link
+		display: flex
+		align-items: center
+		column-gap: 17px
+		span
+			color RGB($pdark_blue)
+		svg
+			wh(7px,12px)
+			transform rotate(180deg)
+	&-need
+		color RGB($pdark_gray)
