Refactor templates for vehicle information and improve popup handling
Enhanced user interface components related to vehicle information by replacing phone number fields with vehicle information in several templates, including vault-auto.pug and vault-vehicle.pug. Improved functionality by modifying the JavaScript file to handle the closing of specific popups more accurately. Extensive revisions also made in the stylus to enhance the look and feel of various elements.

--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -14,7 +14,7 @@ body
 .btn
 	border 2px solid RGB($pdark_blue)
 	border-radius 8px
-	padding 6px 16px
+	padding 8px 16px 9px
 	font 500 16px/19.2px Barlow
 	position: relative
 	&.-blue
