--- a/dev/templates/identity-addres.pug
+++ b/dev/templates/identity-addres.pug
@@ -174,7 +174,7 @@ block content
 							.popup-half-left
 							.popup-half-right
 								.max-527
-									button.popup-close(data-click="front:closeHalf")
+									button.popup-close(data-click="front:closeHalf" data-popup='#address-form')
 										svg
 											use(xlink:href='/img/sprite.svg#close')
 									h2.block-title
