--- a/dev/templates/risk.pug
+++ b/dev/templates/risk.pug
@@ -75,6 +75,8 @@ block content
 					.vault-right.lost-right
 						h2.block-title Tips to reduce your risk
 						ul.risk-list
+							li.risk-list-item.-first
+								img(src='/img/risk.svg')
 							li.risk-list-item
 								.risk-list-item_img
 									svg
