--- a/dev/templates/template/aside-profile.pug
+++ b/dev/templates/template/aside-profile.pug
@@ -1,5 +1,5 @@
 aside.profile-aside
-	nav
+	nav.profile-aside-nav
 		a(href='/profile.html').profile-aside-item.active
 			svg
 				use(xlink:href='/img/sprite.svg#add')
