--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -113,18 +113,24 @@ body
 		align-items: center
 		justify-content: center
 	&-logo
-		wh 287px 64px
+		wh 215px 48px
+		margin-top 80px
+		+desktop()
+			wh 287px 64px
+			margin-top: 0
 	&-form
+		border-radius 8px
 		background RGB($pwhite)
 		border 1.5px solid RGBA($plight_blue, .2)
 		box-shadow 0px 4px 16px RGBA($plight_blue, .16)
-
 		max-width 590px
 		margin 100px auto
 		padding 40px 20px 60px
 		&.-with-bg
-			w 590px
-			margin 0 0 0 491px
+			w 100%
+			+desktop()
+				w 590px
+				margin 0 0 0 491px
 		+desktop()
 			margin calc((100vh - 607px) / 2) auto 0
 			padding 80px 80px 123px
@@ -134,12 +140,17 @@ body
 			&:last-of-type
 				margin-bottom: 0
 		.link
-			text-align: right
 			color RGB($ublue)
+			+desktop()
+				display: inline
+				text-align: right
 		.subtitle
 			margin-bottom 24px
 			+desktop()
 				margin-top 8px
+			.link
+				display: block
+				text-align center
 		.btn-eye
 			position absolute
 			top 20px
@@ -150,7 +161,9 @@ body
 			margin 8px 0 24px
 			font 400 14px/18px Barlow
 			color RGB($pdark_gray)
+			text-align: center
 			+desktop()
+				text-align left
 				margin-top 16px
 				font 400 16px/19.2px Barlow
 		&-actions
@@ -188,42 +201,70 @@ body
 		opacity: 1
 		visibility: visible
 .block
-	w(735px)
+	w 100%
 	max-width 735px
 	margin-top 20px
 	margin-bottom 40px
-	padding 40px
+	padding 40px 24px
 	background RGB($pwhite)
 	border 1.5px solid RGBA($plight_blue,.2)
 	box-shadow 0px 4px 16px RGBA($plight_blue,.16)
 	border-radius 8px
+	+desktop()
+		w(735px)
+		padding 40px
 	&.-small
-		padding: 24px
+		+desktop()
+			padding: 24px
 	&-title
 		font 500 24px/32px Barlow
 	&.-pb0
 		padding-bottom 12px
 .profile
 	&-row
-		padding 0 40px
+		padding 0 24px
 		margin-top 69px
+		+desktop()
+			padding 0 40px
 	&-content
 		max-width 1079px
 	&-aside
-		margin-right 202px
+		+desktop()
+			margin-right 202px
+		&-nav
+			w 360px
+			overflow-x auto
+			display: flex
+			background-color RGB($pwhite)
+			border 2px solid RGBA($plight_blue,.2)
+			padding: 4px
+			border-radius 8px
+			margin-bottom: 24px
+			+desktop()
+				display: initial
+				margin-bottom: 0
+				background-color: transparent
+				border: none
+				padding: 0
+				w initial
 		&-item
 			display flex
 			align-items center
 			padding 11px 21px 10px
 			column-gap 16px
 			border-radius 8px
-			margin-bottom 24px
 			color RGB($pdark_gray)
 			font-weight 500
+			white-space nowrap
+			+desktop()
+				margin-bottom 24px
 			svg
 				wh(14px)
 				use
 					fill RGB($pdark_gray)
+				display: none
+				+desktop()
+					display: block
 			&.active
 				background-color RGBA($plight_blue,.2)
 				color RGB($pdark_blue)
@@ -237,7 +278,9 @@ body
 			margin-bottom 16px
 			column-gap 16px
 			.inpt
-				w(50%)
+				w 100%
+				+desktop()
+					w(50%)
 	&-table
 		margin-top 6px
 		.table
@@ -252,6 +295,12 @@ body
 				tr
 					&:last-child
 						border: 0
+
+		td,th
+			&:nth-child(2)
+				display: none
+				+desktop()
+					display table-cell
 		&-details
 			margin-top 40px
 			.table
@@ -331,6 +380,7 @@ body
 				margin-bottom 16px
 				&+.block-title
 					margin-top 40px
+
 .popup
 	wh(100vw,100vh)
 	background-color RGB(0,0,0,.5)
@@ -378,15 +428,20 @@ body
 			opacity: 1
 			visibility visible
 		&-left,&-right
-			wh(50vw,100vh)
-
 			overflow-y: auto
+			wh(100vw, calc(100vh  - 120px))
+			+desktop()
+				wh(50vw,100vh)
 		&-left
 			left: 0
 			background-color RGBA(0,0,0,.25)
 		&-right
-			padding-top: 201px
-			padding-left: 56px
+			transform translateY(120px)
+			background-color #fff
+			padding 40px 0 80px 16px
+			+desktop()
+				transform translateY(0px)
+				padding 201px 0 0px 56px
 		&-form
 			max-width 530px
 			margin-top: 40px
@@ -465,9 +520,12 @@ body
 			w(120px)
 	&-row
 		column-gap 16px
+		row-gap 16px
 		color RGB($pdark_gray)
 		.inpt
-			w(50%)
+			w(100%)
+			+desktop()
+				w(50%)
 			&.-full
 				w(100%)
 	&-buttons
@@ -815,11 +873,17 @@ body
 		margin 0 8px
 .identity
 	&-select,&-list
-		min-width 583px
+		min-width 312px
+		+desktop()
+			min-width 583px
 	&-list
 		box-shadow 0 2px 8px RGBA($plight_blue,.24)
 		margin-top: 16px
 		border-radius 8px
+		.white-block-list-item
+			padding 16px
+			+desktop()
+				padding 16px 0
 	&-select
 		margin-top: 40px
 		position: relative
@@ -844,10 +908,12 @@ body
 			&_item
 				font-weight 500
 				color RGB($pdark_gray)
-				padding: 8px 0
+				padding: 16px 0
 				display: flex
 				align-items: center
 				column-gap: 11px
+				+desktop()
+					padding: 8px 0
 				label
 					&:before
 						display: block
@@ -860,10 +926,29 @@ body
 
 	&-more
 		margin-top: 16px
-	&-content
-		margin-top 40px
+	&-left
+		padding-bottom: 80px
+		+desktop()
+			padding-bottom: 0
 	&-right
-		padding: 50px 0 0 56px
+		order -1
+		display: flex
+		flex-direction column
+		+desktop()
+			display: block
+			order 0
+			padding: 20px 0 0 56px
+		.link
+			w 100%
+			padding 8px 16px 9px
+			justify-content: center
+			order -1
+			margin-top: 24px
+			+desktop()
+				w initial
+				order 0
+				margin-top: 0
+
 .list
 	margin: 20px 0
 	padding: 20px 0
@@ -985,6 +1070,19 @@ body
 			max-width 395px
 		&_title
 			font 600 16px/15.6px Barlow
+	&-left
+		w 100%
+		+desktop()
+			w initial
+		.link.-plus.btn
+			w 100%
+			justify-content center
+	&-right
+		margin-top: 80px
+		padding-bottom: 80px
+		+desktop()
+			margin-top: 0
+			padding-bottom: 0
 .-whiteshadow
 	.member-popup
 		padding: 0
@@ -992,9 +1090,11 @@ body
 		background-color transparent
 	.popup-half-right
 		background-color: #fff
-		box-shadow 0 2px 8px RGBA($plight_blue,.24)
+		padding 40px 24px 80px 24px
 		+desktop()
 			w 1019px
+			padding 201px 0px 80px 16px
+			box-shadow 0 2px 8px RGBA($plight_blue,.24)
 .driver
 	+desktop()
 		max-width 584px
@@ -1007,15 +1107,17 @@ body
 		margin-top: 0
 		z-index: 0
 		background-color: #fff
-		padding: 40px
+		padding: 40px 20px
 		border: 2px solid RGBA($plight_blue, 0.2)
 		box-shadow: 0px 4px 16px RGBA($plight_blue, 0.16)
 		border-radius: 8px
+		+desktop()
+			padding 40px
 .report
 	.popup-half-right
 		+desktop()
 			w 1190px
-		padding-top: 150px
+			padding-top: 150px
 	&-left
 		+desktop()
 			w 368px
@@ -1043,7 +1145,12 @@ body
 		.btn
 			margin-top: 24px
 	&-right
-		padding-top: 40px
+		w 100%
+		+desktop()
+			w iniital
+			padding-top: 40px
+		img
+			w 100%
 	&-subtitle
 		font 500 24px Barlow
 		color RGB($pdark_blue)
@@ -1051,11 +1158,17 @@ body
 			margin-top: 85px
 	&-steps
 		&-list
-			display: flex
 			column-gap: 64px
 			margin-top: 40px
+			padding-bottom: 80px
+			+desktop()
+				display: flex
+				padding-bottom: 0
 	&-item
 		max-width 240px
+		margin-top: 40px
+		+desktop()
+			margin-top: 0
 		&_title,&_text
 			margin-top: 8px
 		&_title
@@ -1108,6 +1221,7 @@ body
 				border-radius: 8px
 				column-gap: 16px
 				margin-bottom: 16px
+				flex-wrap nowrap
 				&_title
 					font 500 24px/28.8px Barlow
 				&_subtitle
@@ -1126,14 +1240,20 @@ body
 		margin-top: 40px
 		column-gap: 42px
 		&-svg
-			position: absolute
-			bottom: -280px
-			right: -50px
+			display: none
+			+desktop()
+				display: block
+				position: absolute
+				bottom: -280px
+				right: -50px
 		&-item
 			position: relative
 			display: flex
 			column-gap: 8px
 			margin-bottom: 48px
+			&.-first
+				+desktop()
+					display: none
 			&.-full
 				w 100%
 				.risk-list-item_content
@@ -1171,3 +1291,64 @@ body
 			transform rotate(180deg)
 	&-need
 		color RGB($pdark_gray)
+.title
+	&-head
+		max-width 583px
+		margin-top: 40px
+		+desktop()
+			.white-block_title
+				order 0
+
+.block
+	padding 0
+	border 0
+	background transparent
+	box-shadow none
+	+desktop()
+		background: RGB($pwhite);
+		padding: 40px
+		border: 1.5px solid RGBA($plight_blue, 0.2);
+		box-shadow: 0px 4px 16px RGBA($plight_blue, 0.16);
+	.table
+		thead
+			display: none
+		+desktop()
+			thead
+				display table-headear-group
+		tr
+			display: grid
+			justify-content space-between
+			align-items: center
+			grid-template-columns fit-content 1fr
+			grid-template-rows auto
+			grid-template-areas: "info actions" "info2 actions"
+			background: RGB($pwhite);
+			padding: 19px 24px
+			border: 1.5px solid RGBA($plight_blue, 0.2);
+			box-shadow: 0px 4px 16px RGBA($plight_blue, 0.16);
+			border-radius 8px
+			margin-top: 16px
+			+desktop()
+				display table-row
+				background initial
+				padding initial
+				box-shadow none
+				border none
+				border-bottom: 1px solid RGB($plight_gray)
+		td
+			padding: 0 16px 0 0
+			&:first-child
+				font 600 16px/19.2px Barlow
+			&:nth-child(2)
+				padding-top: 8px
+		.table-actions
+			grid-area actions
+			display flex
+			justify-content center
+			align-items center
+			height 100%
+			padding 0 0 0 16px
+			border-left 1px solid RGBA($plight_blue,.6)
+			max-width 40px
+			+desktop()
+				border-left: none
