--- a/dev/templates/title-monitoring.pug
+++ b/dev/templates/title-monitoring.pug
@@ -10,15 +10,15 @@ block content
 					a(href='#').breads-item.-home Home
 					span.breads-delim >
 					a(href='#').breads-item Title Monitoring
+				.white-block_head.title-head
+					h5.white-block_title
+						span Title Monitoring
+					.white-block-status.-active.row
+						svg
+							use(xlink:href='/img/sprite.svg#check_circle')
+						span Active
 				.identity-content.row
 					.identity-left
-						.white-block_head
-							h5.white-block_title
-								span Title Monitoring
-							.white-block-status.-active.row
-								svg
-									use(xlink:href='/img/sprite.svg#check_circle')
-								span Active
 						label.select.identity-select
 							span.select-head
 								span.select-option Filters
