--- a/dev/templates/footer-profile.pug
+++ b/dev/templates/footer-profile.pug
@@ -1,8 +1,16 @@
 footer.foot
 	.section
-		.copy
-			span
-				| @copy; Indetimaxxx 2024. All rights reserved
+		.row.foot-row
+			.foot-site
+				a(href='#') identimaxx.com
+			nav.foot-menu
+				a(href='#') Privacy Policy
+				span.dot
+				a(href='#') Terms of Service
+				span.dot
+				a(href='#') Support
+			.foot-copy
+				| © Identimaxx 2024. All rights reserved.
 		.popup#popup
 			#popup-inner.popup-inner
 				#popup-head.popup-head
