--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -1,6 +1,12 @@
 footer.foot
 	.section
-		.copy
-			span
-				| @copy; Indetimaxxx 2024. All rights reserved
+		.row
+			.foot-site
+				a(href='#') identimaxx.com
+			nav.footer-menu
+				a(href='#') Privacy Policy
+				a(href='#') Terms of Service
+				a(href='#') Support
+			.foot-copy
+				| © Identimaxx 2024. All rights reserved.
 	script(src='/front.js' type='module')
