--- a/dev/templates/vault-auto.pug
+++ b/dev/templates/vault-auto.pug
@@ -92,12 +92,12 @@ block content
 					svg
 						use(xlink:href='/img/sprite.svg#close')
 				.change-method.member-popup.driver
-					h5.title-popup.block-title Drivers's License
+					h5.title-popup.block-title Driver's License
 					form.change-form
 						.change-row
 							.inpt.-full
 								span.inpt-placeholder Item Name
-								input(type='text' value="Drivers's license")
+								input(type='text' value="Driver's license")
 						.change-row
 							.inpt.-full
 								span.inpt-placeholder Name on document
