--- a/dev/templates/vault-vehicle.pug
+++ b/dev/templates/vault-vehicle.pug
@@ -76,7 +76,7 @@ block content
 				form.change-form
 					.change-row
 						.inpt.-full
-							span.inpt-placeholder Vin Number
+							span.inpt-placeholder VIN Number
 							input(type='text' )
 					.change-row
 						.inpt.-full
