--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -30,7 +30,7 @@ block content
 										.vault-accordeon-item_img
 											svg
 												use(xlink:href='/img/sprite.svg#directions_car')
-										.vault-accordeon-item_title Drivers's License
+										.vault-accordeon-item_title Driver's License
 										button.vault-accordeon-item_arr
 									.vault-accorderon-item_body
 								.vault-accordeon-item
